--- a/tools/convert/css/src/code.less
+++ b/tools/convert/css/src/code.less
@@ -34,7 +34,7 @@
         .define-code-border();
         overflow: auto;
         code {
-            white-space: nowrap;
+            white-space: pre;
         }
     }
 
